--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -7,16 +7,23 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependency directories
 node_modules
-dist
-dist-ssr
-*.local
 
+# Build output
+dist/
+dist-ssr/
+
+# Local environment files
+*.local
 .env
+.env.*
+.env.local
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
