--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,3 @@
 PORT=3000
 SECRET_KEY="chi chi chi re noni chi"
-MONGODB_URI="mongodb+srv://anik001:iamanik001@cluster0.yhuo0.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGODB_URI="mongodb://localhost:27017/Link_Tree"
